apply JDK 25 patterns